Ajout du calendrier universitaire.

--- a/ETSMobile/Base.lproj/Main_iPhone.storyboard
+++ b/ETSMobile/Base.lproj/Main_iPhone.storyboard
@@ -37,13 +37,64 @@
                             <outlet property="delegate" destination="cmt-IF-br5" id="Op4-oG-jRd"/>
                         </connections>
                     </collectionView>
-                    <navigationItem key="navigationItem" id="CwQ-KE-zWa"/>
+                    <navigationItem key="navigationItem" id="CwQ-KE-zWa">
+                        <barButtonItem key="rightBarButtonItem" title="ÉTS" id="Ijd-jE-0H0">
+                            <connections>
+                                <segue destination="p9e-pm-6yn" kind="push" id="SYv-zO-Phf"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                     <simulatedStatusBarMetrics key="simulatedStatusBarMetrics"/>
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                 </collectionViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="qks-3W-hOf" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-868" y="794"/>
+        </scene>
+        <!--University Calendar View Controller - Calendrier universitaire-->
+        <scene sceneID="T3f-x8-RuB">
+            <objects>
+                <tableViewController id="p9e-pm-6yn" customClass="ETSUniversityCalendarViewController" sceneMemberID="viewController">
+                    <tableView key="view" opaque="NO" clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="zfN-1R-NFG">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <prototypes>
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="none" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="EventIdentifier" textLabel="7UW-yQ-uoG" detailTextLabel="YGz-az-zSB" style="IBUITableViewCellStyleSubtitle" id="Os0-6A-HCD">
+                                <rect key="frame" x="0.0" y="86" width="320" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Os0-6A-HCD" id="MNS-8n-6PJ">
+                                    <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <label opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="left" text="Title" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsLetterSpacingToFitWidth="YES" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="29" id="7UW-yQ-uoG">
+                                            <rect key="frame" x="15" y="6" width="29" height="18"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="left" text="Subtitle" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="YGz-az-zSB">
+                                            <rect key="frame" x="15" y="24" width="40" height="14"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="11"/>
+                                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="p9e-pm-6yn" id="OQe-3d-R4z"/>
+                            <outlet property="delegate" destination="p9e-pm-6yn" id="hYt-ZJ-gJt"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" title="Calendrier universitaire" id="uho-ca-MSw"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="7ld-vv-naj" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-427" y="790"/>
         </scene>
         <!--Comment View Controller - Commentaire-->
         <scene sceneID="tlV-6T-k3a">
