--- a/ETSMobile/Base.lproj/Main_iPad.storyboard
+++ b/ETSMobile/Base.lproj/Main_iPad.storyboard
@@ -34,7 +34,15 @@
                             <outlet property="delegate" destination="cmt-IF-br5" id="Op4-oG-jRd"/>
                         </connections>
                     </collectionView>
-                    <navigationItem key="navigationItem" id="kpg-3D-1wy"/>
+                    <navigationItem key="navigationItem" id="kpg-3D-1wy">
+                        <barButtonItem key="rightBarButtonItem" title="ÉTS" id="gEI-rS-XSq">
+                            <connections>
+                                <segue destination="hy2-aJ-OWQ" kind="popover" popoverAnchorBarButtonItem="gEI-rS-XSq" id="lKR-H4-Z6v">
+                                    <popoverArrowDirection key="popoverArrowDirection" up="YES" down="YES" left="YES" right="YES"/>
+                                </segue>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                     <simulatedStatusBarMetrics key="simulatedStatusBarMetrics"/>
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                 </collectionViewController>
@@ -685,6 +693,50 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Lu1-sy-L90" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="4460" y="8972"/>
+        </scene>
+        <!--University Calendar View Controller-->
+        <scene sceneID="Hlw-9L-Duu">
+            <objects>
+                <tableViewController id="hy2-aJ-OWQ" customClass="ETSUniversityCalendarViewController" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="A4G-jx-xyA">
+                        <rect key="frame" x="0.0" y="0.0" width="768" height="1024"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <prototypes>
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="EventIdentifier" textLabel="xpc-58-gb7" detailTextLabel="TCM-cr-Tnh" style="IBUITableViewCellStyleSubtitle" id="Vgj-ay-LWI">
+                                <rect key="frame" x="0.0" y="22" width="768" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Vgj-ay-LWI" id="p2Q-dG-Hey">
+                                    <rect key="frame" x="0.0" y="0.0" width="768" height="43"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <label opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="left" text="Title" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="29" id="xpc-58-gb7">
+                                            <rect key="frame" x="15" y="6" width="29" height="18"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="left" text="Subtitle" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="TCM-cr-Tnh">
+                                            <rect key="frame" x="15" y="24" width="40" height="14"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="11"/>
+                                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="hy2-aJ-OWQ" id="PK8-8P-yyg"/>
+                            <outlet property="delegate" destination="hy2-aJ-OWQ" id="Qg1-dy-jOr"/>
+                        </connections>
+                    </tableView>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="pFm-8Z-E7T" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3582" y="8920"/>
         </scene>
         <!--Courses View Controller i Pad - Root View Controller-->
         <scene sceneID="5ZO-ya-AAa">
